; ModuleID = '/home/carl/AnghaBench/freebsd/tools/bus_space/Python/extr_lang.c_initbus.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/bus_space/Python/extr_lang.c_initbus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"bus\00", align 1
@bus_methods = common dso_local global i32 0, align 4
@bus_docstr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [7 x i8] c"busdma\00", align 1
@busdma_methods = common dso_local global i32 0, align 4
@busdma_docstr = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @initbus() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = load i32, i32* @bus_methods, align 4
  %5 = load i32, i32* @bus_docstr, align 4
  %6 = call i32* @Py_InitModule3(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %4, i32 %5)
  store i32* %6, i32** %2, align 8
  %7 = load i32, i32* @busdma_methods, align 4
  %8 = load i32, i32* @busdma_docstr, align 4
  %9 = call i32* @Py_InitModule3(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i32 %7, i32 %8)
  store i32* %9, i32** %3, align 8
  %10 = load i32*, i32** %2, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @module_initialize(i32* %10, i32* %11)
  %13 = load i32, i32* %1, align 4
  ret i32 %13
}

declare dso_local i32* @Py_InitModule3(i8*, i32, i32) #1

declare dso_local i32 @module_initialize(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
